After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645843 - Fix crash on Alt-<Above_Tab>
Fix crash on Alt-<Above_Tab>
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-03-27 17:43 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2011-03-28 21:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash on Alt-<Above_Tab> (913 bytes, patch)
2011-03-27 17:43 UTC, Jasper St. Pierre (not reading bugmail)
accepted-commit_now Details | Review
Fix crash on Alt-<Above_Tab> (915 bytes, patch)
2011-03-27 18:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-03-27 17:43:35 UTC
fix sigsegv
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-03-27 17:43:38 UTC
Created attachment 184373 [details] [review]
Fix crash on Alt-<Above_Tab>

https://bugzilla.gnome.org/show_bug.cgi?id=645653
Comment 2 Florian Müllner 2011-03-27 18:03:38 UTC
Review of attachment 184373 [details] [review]:

I'm pretty sure that patch got reviewed before (and got lost in the bugzilla outage ...)

Code looks good & safe, commit message could use some improvements (duplicate bug URL, missing body ...)

Please go ahead and request a freeze break.
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-03-27 18:13:38 UTC
Created attachment 184376 [details] [review]
Fix crash on Alt-<Above_Tab>

Fix a simple segfault, didn't investigate too hard.
Comment 4 Florian Müllner 2011-03-27 18:53:37 UTC
Review of attachment 184376 [details] [review]:

Got 2/2 from r-t (https://mail.gnome.org/archives/release-team/2011-March/msg00432.html), so good to commit after approval from owen.
Comment 5 Owen Taylor 2011-03-28 21:28:08 UTC
Review of attachment 184376 [details] [review]:

Good with me, if you fix the commit message - current one isn't OK.

Also, probably should clarify the subject that it happens on the cycle_group action, not on alt-<Above_Tab> which is bound by default to switch_group.