display: Fix crash with cycle_group

Commit e3ebcc004d6ddb13174cfdd934cb086fb2e50808 introduced an unsafe
access for 'window', which could cause a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=645843